--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,6 +88,15 @@
                 android:textColorHint="#494949"
                 tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize" />
 
+            <!-- Remember Me Checkbox -->
+            <CheckBox
+                android:id="@+id/rememberMeCheckbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Remember me"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"/>
+
             <Button
                 android:id="@+id/btnLogin"
                 android:layout_width="match_parent"
