--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -21,6 +21,7 @@
         android:id="@+id/recycler_view_messages"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/topAppBar"
         android:layout_above="@+id/layout_send_message"
         android:paddingBottom="8dp"
         android:clipToPadding="false" />
