--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="200dp"
     android:background="@color/phinmaGreen"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -14,10 +14,10 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/circle_background"
         android:contentDescription="@string/profile_picture"
-        android:src="@drawable/ic_profile_placeholder"
         android:scaleType="centerCrop"
-        android:background="@drawable/circle_background" />
+        android:src="@drawable/ic_profile_placeholder" />
 
     <TextView
         android:id="@+id/usernameHeader"
