--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,12 +6,12 @@
     android:background="@color/offwhite">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/splashLogo"
+        android:layout_width="123dp"
+        android:layout_height="129dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/logo_phinma_shadow"
         android:alpha="0.0"
-    android:id="@+id/splashLogo"/>
+        android:src="@mipmap/ic_launcher_round" />
 
     <!-- Optional: Add your app name or other elements -->
     <TextView
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/splashLogo"
         android:layout_centerHorizontal="true"
-        android:text="@string/app_name"
+        android:text=""
         android:textSize="24sp"
         android:alpha="0.0"
         android:id="@+id/splashText"/>
