--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -42,7 +42,7 @@
 
         <item
             android:id="@+id/nav_scholarship"
-            android:title="Scholarship Information"
+            android:title="Scholarships"
             android:icon="@drawable/navbar_scholarship" />
 
         <item
@@ -55,8 +55,14 @@
     <group android:id="@+id/support_group">
         <item
             android:id="@+id/nav_support"
-            android:title="Support/Contact Us"
+            android:title="Support Chat"
             android:icon="@drawable/navbar_support" />
+
+        <item
+            android:id="@+id/nav_settings"
+            android:title="Settings"
+            android:icon="@drawable/navbar_settings" />
+
         <item
             android:id="@+id/nav_logout"
             android:title="Logout"
