--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -15,16 +15,18 @@
         app:navigationIcon="@drawable/ic_back"
         app:navigationIconTint="@android:color/white"
         app:title="Support"
-        app:titleTextColor="@color/phinmaYellow" />
+        app:titleTextColor="@color/phinmaYellow"
+        app:menu="@menu/chat_menu" />  <!-- Add this line -->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_messages"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/topAppBar"
         android:layout_above="@+id/layout_send_message"
-        android:paddingBottom="8dp"
-        android:clipToPadding="false" />
+        android:layout_below="@+id/topAppBar"
+        android:background="@color/white"
+        android:clipToPadding="false"
+        android:paddingBottom="8dp" />
 
     <LinearLayout
         android:id="@+id/layout_send_message"
@@ -45,14 +47,21 @@
             android:completionThreshold="1"
             android:hint="Type a question..."
             android:inputType="textCapSentences|textMultiLine"
-            android:maxLines="3"
-            android:minHeight="48dp" />
+            android:maxLines="5"
+            android:minHeight="48dp"
+            android:scrollHorizontally="false"
+            android:ellipsize="none"
+            android:dropDownWidth="wrap_content"
+            android:textColor="#000000"
+            android:textColorHint="#000000" />
+
 
         <Button
             android:id="@+id/button_send"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:text="Send" />
+            android:text="Send"
+            android:textColor="#FDFDFD" />
     </LinearLayout>
 
 </RelativeLayout>
