--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_schoolselection">
 
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardLogin"
         android:layout_width="match_parent"
@@ -88,14 +89,38 @@
                 android:textColorHint="#494949"
                 tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize" />
 
+
             <!-- Remember Me Checkbox -->
-            <CheckBox
-                android:id="@+id/rememberMeCheckbox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/remember_me"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="16dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+
+                <CheckBox
+                    android:id="@+id/rememberMeCheckbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_weight="1"
+                    android:checked="true"
+                    android:text="@string/remember_me"
+                    android:textColor="#000000"
+                    android:textColorHighlight="#000000"
+                    android:textColorHint="#000000"
+                    app:buttonIconTint="@color/white" />
+
+                <TextView
+                    android:id="@+id/btnGuest"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Continue as Guest"
+                    android:textColor="@color/phinmaGreen"
+                    android:textSize="12dp" />
+            </LinearLayout>
+
 
             <Button
                 android:id="@+id/btnLogin"
