--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,25 +3,15 @@
     android:id="@+id/splashLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/offwhite">
+    android:background="@color/phinmaGreen">
 
     <ImageView
         android:id="@+id/splashLogo"
-        android:layout_width="123dp"
-        android:layout_height="129dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerInParent="true"
         android:alpha="0.0"
-        android:src="@mipmap/ic_launcher_round" />
-
-    <!-- Optional: Add your app name or other elements -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/splashLogo"
-        android:layout_centerHorizontal="true"
-        android:text=""
-        android:textSize="24sp"
-        android:alpha="0.0"
-        android:id="@+id/splashText"/>
+        android:scaleType="centerCrop"
+        android:src="@mipmap/ic_launcher_foreground" />
 
 </RelativeLayout>
